z-index fix

--- a/css/tesla-clone.css
+++ b/css/tesla-clone.css
@@ -81,6 +81,7 @@ p {
 
 /* Header style */
 .header {
+  z-index: 1;
   position: fixed;
   width: 100%;
   top: 0;
@@ -174,10 +175,14 @@ p {
   display: flex;
   justify-content: flex-end;
   display: none;
+  z-index: 2;
+  opacity: 0;
+  transition: all 0.5s ease;
   background-color: rgba(0, 0, 0, 0.3);
 }
 .overlay.show {
   display: flex;
+  opacity: 1;
 }
 .overlay__menu {
   background-color: #fff;
